# tinyrender

./: .gitignore  Cargo.toml  README.md  justfile
src/: common.rs  consts.rs  lesson1.rs  lesson3_6.rs  lesson3_7.rs  lesson4.rs  lesson5.rs  lesson6.rs  lesson6a.rs  lesson6b.rs  lesson6c.rs  lesson6dbis.rs  lesson7.rs  lesson8.rs  lesson8b.rs  lesson8c.rs  lib.rs  main.rs
src/lesson2/: mod.rs
src/lesson3/: mod.rs
src/lesson3_5/: mod.rs
src/lesson9/: mod.rs  shader.wgsl
src/lesson9b/: mod.rs
src/lesson9c/: mod.rs  shader.wgsl
