[package]
name = "tinyrender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures-intrusive = "0.4.0"
glam = "0.20.3"
image = "0.24.1"
itertools = "0.10.3"
obj-rs = "0.7.0"
png = "0.17.5"
pollster = "0.2.5"
rand = { version = "0.8.5", features = ["small_rng"] }
structopt = "0.3.26"
tap = "1.0.1"
wgpu = "0.13.1"

[features]
