[package]
name = "tinyrender"
version = "0.1.0"
edition = "2021"
default-run = "tinyrender"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
bincode = "1.3.3"
bytemuck = { version = "1.11.0", features = ["derive"] }
env_logger = "0.9.0"
flate2 = "1.0.24"
futures-intrusive = "0.4.0"
glam = "0.20.3"
image = "0.24.1"
itertools = "0.10.3"
naga = "0.9.0"
nom-pdb = "0.0.9"
obj-rs = "0.7.0"
pollster = "0.2.5"
protein-core = "0.1.7"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.143", features = ["serde_derive"] }
structopt = "0.3.26"
tap = "1.0.1"
wgpu = "0.13.1"

[features]
